
    HADOOP-11410. Make the rpath of libhadoop.so configurable (cmccabe)

    HADOOP-11416. Move ChunkedArrayList into hadoop-common (cmccabe)

    HADOOP-10840. Fix OutOfMemoryError caused by metrics system in Azure File
    System. (Shanyu Zhao via cnauroth)

    HADOOP-11248. Add hadoop configuration to disable Azure Filesystem metrics
    collection. (Shanyu Zhao via cnauroth)

  OPTIMIZATIONS

    HADOOP-11323. WritableComparator#compare keeps reference to byte array.
    (Wilfred Spiegelenburg via wang)

    HADOOP-11238. Update the NameNode's Group Cache in the background when
    possible (Chris Li via Colin P. McCabe)

    HADOOP-10809. hadoop-azure: page blob support. (Dexter Bradshaw,
    Mostafa Elhemali, Eric Hanson, and Mike Liddell via cnauroth)

    HADOOP-11188. hadoop-azure: automatically expand page blobs when they become
    full. (Eric Hanson via cnauroth)

  BUG FIXES

    HADOOP-11236. NFS: Fix javadoc warning in RpcProgram.java (Abhiraj Butala via harsh)

    HADOOP-11166. Remove ulimit from test-patch.sh. (wang)

    HDFS-7227. Fix findbugs warning about NP_DEREFERENCE_OF_READLINE_VALUE in
    SpanReceiverHost (cmccabe)

    HADOOP-11186. documentation should talk about
    hadoop.htrace.spanreceiver.classes, not hadoop.trace.spanreceiver.classes (cmccabe)

    HADOOP-11165. TestUTF8 fails when run against java 8.
    (Stephen Chu via cnauroth)

    HADOOP-10717. HttpServer2 should load jsp DTD from local jars instead of
    going remote. (Dapeng Sun via wheat9)

    HADOOP-11268. Update BUILDING.txt to remove the workaround for tools.jar.
    (Li Lu via wheat9)

    HADOOP-11230. Add missing dependency of bouncycastle for kms, httpfs, hdfs, MR
    and YARN. (Robert Kanter via wheat9)

    HADOOP-11269. Add java 8 profile for hadoop-annotations. (Li Lu via wheat9)

    HADOOP-11271. Use Time.monotonicNow() in Shell.java instead of Time.now()
    (vinayakumarb)

    HADOOP-11266. Remove no longer supported activation properties for packaging